--- a/Practice2/src/styles/base/base.css
+++ b/Practice2/src/styles/base/base.css
@@ -18,7 +18,7 @@ html {
 
 @font-face {
 	font-family: Roboto;
-	src: url(../assets/fonts/Roboto-Regular.ttf);
+	src: url(../../assets/fonts/Roboto-Regular.ttf);
 }
 
 * {
