--- a/Practice2/src/styles/variables/main-var.css
+++ b/Practice2/src/styles/variables/main-var.css
@@ -23,4 +23,8 @@
   --bp-large: 1440px;
   --bp-medium: 768px;
   --bp-small: 320px;
+
+  /* Padding */
+  --p-default: 42px;
+  --p-minimum: 15px;
 }
