--- a/Practice2/src/styles/base/base.css
+++ b/Practice2/src/styles/base/base.css
@@ -1,28 +1,7 @@
 body {
-  width: 100%;
-  margin: 0;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 0;
-  border: 0;
-  vertical-align: baseline;
-}
-
-html {
   font-size: 16px;
-  scroll-behavior: smooth;
   font-family: Roboto;
-  font-style: normal;
-  font-weight: 400;
-}
-
-@font-face {
-	font-family: Roboto;
-	src: url(../../assets/fonts/Roboto-Regular.ttf);
-}
-
-* {
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
+  color: var(--c-light);
+  background: var(--c-light);
+  line-height: var(--lh-default);
 }
