Update common component, README.md, folders structure

--- a/Practice2/src/styles/components/common/all.css
+++ b/Practice2/src/styles/components/common/all.css
@@ -4,4 +4,5 @@
 @import url(./text.css);
 @import url(./heading.css);
 @import url(./input-stay-in-touch.css);
+@import url(./items.css);
 @import url(./grid-items.css);
