--- a/Practice2/src/styles/main.css
+++ b/Practice2/src/styles/main.css
@@ -1,5 +1,5 @@
 /* abstracts */
-@import url(./variables/main-var.css);
+@import url(./variables/all.css);
 
 /* base */
 @import url(./base/all.css);
