Update README.md, variables.css, components.css

--- a/Practice2/src/styles/components/common/heading.css
+++ b/Practice2/src/styles/components/common/heading.css
@@ -1,6 +1,6 @@
 .heading {
   line-height: 48px;
-  font-size: var(--fs-large);
+  font-size: var(--fs-wide);
   text-align: center;
   font-weight: 400;
 }
