--- a/Practice2/src/styles/components/all.css
+++ b/Practice2/src/styles/components/all.css
@@ -1,10 +1,11 @@
 @import url(./choose-your-plan.css);
 @import url(./features.css);
-@import url(./footer.css);
+@import url(./bot.css);
 @import url(./gregory.css);
-@import url(./header.css);
+@import url(./top.css);
 @import url(./map.css);
 @import url(./portfolio.css);
 @import url(./stay-in-touch.css);
 @import url(./testimonials.css);
 @import url(./version.css);
+@import url(./common/all.css);
