--- a/Practice2/src/styles/components/common/all.css
+++ b/Practice2/src/styles/components/common/all.css
@@ -3,6 +3,6 @@
 @import url(./nav.css);
 @import url(./text.css);
 @import url(./heading.css);
-@import url(./input-stay-in-touch.css);
+@import url(./input.css);
 @import url(./items.css);
 @import url(./grid-items.css);
