--- a/Practice2/src/styles/components/common/card.css
+++ b/Practice2/src/styles/components/common/card.css
@@ -6,6 +6,7 @@
   font-size: var(--fs-medium);
   text-align: center;
   line-height: 27px;
+  text-transform: uppercase;
 }
 
 .card-title-primary {
@@ -17,7 +18,7 @@
 }
 
 .card-text-number {
-  font-size: var(--fs-largest);
+  font-size: var(--fs-wider);
   text-align: center;
   line-height: 48px;
 }
@@ -31,7 +32,7 @@
 }
 
 .card-text {
-  font-size: var(--fs-defalut);
+  font-size: var(--fs-default);
   line-height: 24px;
   text-align: center;
 }
