--- a/Practice2/src/styles/variables/font-size.css
+++ b/Practice2/src/styles/variables/font-size.css
@@ -1,7 +1,7 @@
 :root {
   --fs-default: 16px;
   --fs-medium: 18px;
-  --fs-large: 44px;
-  --fs-largest: 64px;
+  --fs-wide: 44px;
+  --fs-wider: 64px;
   --fs-base: 32px;
 }
