Update README.md, all.css, common-component.html, Create font-face.css,

--- a/Practice2/src/styles/main.css
+++ b/Practice2/src/styles/main.css
@@ -4,8 +4,5 @@
 /* base */
 @import url(./base/all.css);
 
-/* common-component */
-@import url(./components/common/all.css);
-
-/* Each component */
+/* Component */
 @import url(./components/all.css);
