--- a/Practice2/src/styles/components/common/items.css
+++ b/Practice2/src/styles/components/common/items.css
@@ -4,6 +4,8 @@
   grid-template-columns: auto auto;
   padding-left: var(--p-large);
   padding-right: var(--p-large);
+  height: 322px;
+  width: 554px;
 }
 
 .item-container {
@@ -18,6 +20,8 @@
 
 .item-image-primary {
   float: left;
+  width: 40px;
+  height: 40px;
 }
 
 .item-text-primary {
