--- a/Practice2/src/styles/components/common/nav.css
+++ b/Practice2/src/styles/components/common/nav.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   padding: 0;
+  background-color: var(--c-dark);
 }
 
 .nav-item {
@@ -13,4 +14,8 @@
   font-size: var(--fs-medium);
   line-height: 21px;
   text-transform: uppercase;
+}
+
+.nav-link-success {
+  margin-right: var(--m-base);
 }
