--- a/Practice2/src/styles/variables/padding.css
+++ b/Practice2/src/styles/variables/padding.css
@@ -3,6 +3,7 @@
   --p-large: 150px;
   --p-default: 42px;
   --p-minimum: 20px;
+  --p-small: 15px;
   --p-wide: 68px;
   --p-base: 38px;
   --p-success: 28px;
