--- a/Practice2/src/styles/components/common/nav.css
+++ b/Practice2/src/styles/components/common/nav.css
@@ -14,6 +14,7 @@
   font-size: var(--fs-medium);
   line-height: 21px;
   text-transform: uppercase;
+  text-decoration: none;
 }
 
 .nav-link-success {
