--- a/Practice2/src/styles/components/common/input.css
+++ b/Practice2/src/styles/components/common/input.css
@@ -1,4 +1,12 @@
 .search {
   border: 0;
-  border-bottom: 1px solid var(--c-dark);
+  border-bottom: 1px solid var(--c-darker);
+}
+
+.search ::placeholder {
+  width: 166px;
+  height: 27px;
+  margin-bottom: 5px;
+  font-size: var(--fs-heading-default);
+  line-height: var(--lh-heading-base);
 }
