--- a/Practice2/src/styles/components/common/heading.css
+++ b/Practice2/src/styles/components/common/heading.css
@@ -1,6 +1,6 @@
 .heading {
-  line-height: 48px;
-  font-size: var(--fs-wide);
+  line-height: var(--lh-heading-large);
+  font-size: var(--fs-heading-large);
   text-align: center;
   font-weight: 400;
 }
