--- a/Practice2/src/styles/components/common/nav.css
+++ b/Practice2/src/styles/components/common/nav.css
@@ -12,7 +12,7 @@
 .nav-link {
   color: var(--c-light);
   font-size: var(--fs-medium);
-  line-height: 21px;
+  line-height: var(--lh-medium);
   text-transform: uppercase;
   text-decoration: none;
 }
