--- a/Practice2/src/styles/variables/color.css
+++ b/Practice2/src/styles/variables/color.css
@@ -3,6 +3,8 @@
   --c-light: #fff;
   --c-dark: #4b4b4b;
   --c-warning: #ebcB80;
+  --c-success: #f6f6f6;
+  --c-darker: #7d7d7d;
 
   /* Color heading */
   --c-heading-light: var(--c-light);
