--- a/Practice2/src/styles/variables/font-size.css
+++ b/Practice2/src/styles/variables/font-size.css
@@ -4,6 +4,7 @@
   --fs-medium: 18px;
   --fs-large: 64px;
   --fs-base: 32px;
+  --fs-success: 24px;
 
   /* Font size heading */
   --fs-heading-default: 18px;
