Update component.css, create common-sub.css, rename media.css

--- a/Practice2/src/styles/components/common/all.css
+++ b/Practice2/src/styles/components/common/all.css
@@ -4,4 +4,5 @@
 @import url(./text.css);
 @import url(./heading.css);
 @import url(./input.css);
-@import url(./items.css);
+@import url(./media.css);
+@import url(./common-sub.css);
