Update tab-size folders, rename class

--- a/Practice2/src/styles/components/common/media.css
+++ b/Practice2/src/styles/components/common/media.css
@@ -1,9 +1,9 @@
-.media {
+.list-unstyled {
   display: flex;
   column-gap: 30px;
 }
 
-.media-sub {
+.media {
   padding-top: var(--p-base);
   display: flex;
 }
