--- a/Practice2/src/partials/top-section.html
+++ b/Practice2/src/partials/top-section.html
@@ -1,5 +1,5 @@
 <header>
-  <img src="../images/top-background.png" alt="background">
+  <img src="../assets/images/top-background.png" alt="background">
   <div>
     <p class="icon-top">h.</p>
     <div class="common">
@@ -18,9 +18,6 @@
           <a class="nav-link" href="javascript:void(0)">Find more</a>
         </li>
       </ul>
-    </div>
-    <div>
-      <img src="" alt="">
     </div>
   </div>
 </header>
