--- a/Practice2/src/partials/top-section.html
+++ b/Practice2/src/partials/top-section.html
@@ -1,9 +1,8 @@
-<header>
-  <img src="../assets/images/top-background.png" alt="background">
+<header class="page-top">
+  <img src="./assets/images/top-background.png" alt="background" class="top-img">
   <div>
-    <p class="icon-top">h.</p>
-    <div class="common">
-      <h4 class="sub-heading">Navs</h4>
+    <div class="nav-top">
+      <p class="top-text">h.</p>
       <ul class="nav">
         <li class="nav-item">
           <a class="nav-link nav-link-success" href="javascript:void(0)">Hotels</a>
@@ -18,6 +17,15 @@
           <a class="nav-link" href="javascript:void(0)">Find more</a>
         </li>
       </ul>
+      <div class="nav-icon">
+        <img src="./assets/images/twitter-icon.png" alt="twitter-icon" class="nav-icon-success">
+        <img src="./assets/images/facebook-icon.png" alt="facebook-icon" class="nav-icon-success">
+       <img src="./assets/images/instagram-icon.png" alt="instagram-icon">
+      </div>
     </div>
   </div>
+  <h1 class="top-heading">See The Unmatched Beauty Of The Great Leaks</h1>
+  <img src="./assets/images/top-img-sub.png" alt="image-sub" class="top-img-sub">
+  <img src="./assets/images/play-button.png" alt="play-button">
+  <img src="./assets/images/play-button-sub.png" alt="play-button-sub">
 </header>
