--- a/Practice2/src/partials/top-section.html
+++ b/Practice2/src/partials/top-section.html
@@ -1,5 +1,12 @@
 <header class="page-top">
-  <img src="./assets/images/top-background.png" alt="background" class="top-img">
+  <div>
+    <picture>
+      <source media="(min-width: 1440px)" srcset="./assets/images/top-background.png">
+      <source media="(min-width: 1440px)" srcset="./assets/images/top-background-tablet.jpg">
+      <source media="(min-width: 1440px)" srcset="./assets/images/top-background-mobile.jpg">
+      <img src="./assets/images/top-background.png" alt="background" class="top-img">
+    </picture>
+  </div>
   <div>
     <div class="nav-top">
       <p class="top-text">h.</p>
@@ -20,12 +27,13 @@
       <div class="nav-icon">
         <img src="./assets/images/twitter-icon.png" alt="twitter-icon" class="nav-icon-success">
         <img src="./assets/images/facebook-icon.png" alt="facebook-icon" class="nav-icon-success">
-       <img src="./assets/images/instagram-icon.png" alt="instagram-icon">
+        <img src="./assets/images/instagram-icon.png" alt="instagram-icon">
       </div>
     </div>
   </div>
   <h1 class="top-heading">See The Unmatched Beauty Of The Great Leaks</h1>
-  <img src="./assets/images/top-img-sub.png" alt="image-sub" class="top-img-sub">
-  <img src="./assets/images/play-button.png" alt="play-button">
-  <img src="./assets/images/play-button-sub.png" alt="play-button-sub">
+  <div class="nav-video">
+    <img src="./assets/images/top-img-sub.png" alt="image-sub" class="top-img-sub">
+    <button class="play-button"><img src="./assets/images/play-button.png"></button>
+  </div>
 </header>
