--- a/Practice2/src/styles/components/top.css
+++ b/Practice2/src/styles/components/top.css
@@ -61,16 +61,9 @@
   line-height: var(--lh-heading-large);
   text-align: center;
   margin-top: 74px;
-  padding: 0 410px;
+  height: 96px;
 }
 
 .nav-video {
   position: relative;
-}
-
-@media screen and (min-width: 768px) {
-  .nav-top {
-    display: flex;
-
-  }
 }
