--- a/Practice2/src/partials/top-section.html
+++ b/Practice2/src/partials/top-section.html
@@ -1,10 +1,10 @@
 <header class="page-top">
-    <picture>
-      <source media="(min-width: 1440px)" srcset="./assets/images/top-background.png">
-      <source media="(min-width: 1440px)" srcset="./assets/images/top-background-tablet.jpg">
-      <source media="(min-width: 1440px)" srcset="./assets/images/top-background-mobile.jpg">
-      <img src="./assets/images/top-background.png" alt="background" class="top-img">
-    </picture>
+  <picture>
+    <source media="(min-width: 1440px)" srcset="./assets/images/top-background.png">
+    <source media="(min-width: 768px)" srcset="./assets/images/top-background-tablet.png">
+    <source media="(min-width: 320px)" srcset="./assets/images/top-background-mobile.png">
+    <img src="./assets/images/top-background-mobile.png" alt="background" class="top-img">
+  </picture>
   <div>
     <div class="nav-top">
       <p class="top-text">h.</p>
@@ -28,10 +28,15 @@
         <img src="./assets/images/instagram-icon.png" alt="instagram-icon">
       </div>
     </div>
-  </div>
+  </div class="info-video">
   <h1 class="top-heading">See The Unmatched Beauty Of The Great Leaks</h1>
   <div class="nav-video">
-    <img src="./assets/images/top-img-sub.png" alt="image-sub" class="top-img-sub">
+    <picture>
+      <source media="(min-width: 1440px)" srcset="./assets/images/top-img-sub.png">
+      <source media="(min-width: 768px)" srcset="./assets/images/top-img-sub-tablet.png">
+      <source media="(min-width: 320px)" srcset="./assets/images/top-img-sub-mobile.png">
+      <img src="./assets/images/top-img-sub.png" alt="image-sub" class="top-img-sub">
+    </picture>
     <button class="play-button"><img src="./assets/images/play-button.png"></button>
   </div>
 </header>
