--- a/Practice2/src/styles/components/top.css
+++ b/Practice2/src/styles/components/top.css
@@ -33,8 +33,8 @@
   text-transform: uppercase;
   font-size: 36px;
   line-height: var(--lh-heading-wide);
-  margin-right: 279px;
   color: var(--c-warning);
+  margin-right: 100px;
 }
 
 .nav {
@@ -44,11 +44,11 @@
 .nav-top {
   display: flex;
   padding: 48px var(--p-large) 0 var(--p-large);
+  justify-content: space-around;
 }
 
 .nav-icon {
   padding-top: 19px;
-  margin-left: 148px;
 }
 
 .nav-icon-success {
@@ -61,9 +61,41 @@
   line-height: var(--lh-heading-large);
   text-align: center;
   margin-top: 74px;
-  height: 96px;
 }
 
 .nav-video {
   position: relative;
+}
+
+@media only screen and (min-width: 768px) {
+  .nav-top {
+    display: flex;
+    padding: 32px 24px 0 24px;
+    justify-content: space-around;
+  }
+
+  .nav {
+    padding-top: 19px;
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .nav-link-success {
+    margin-right: 32px;
+  }
+
+  .nav-icon-success {
+    margin-right: 21px;
+  }
+
+  .top-text {
+    margin-right: 30px;
+  }
+}
+
+@media only screen and (min-width: 320px) {
+  .nav-top {
+    display: flex;
+    padding: 24px var(--p-small) 0 var(--p-small);
+  }
 }
