Implement top section for Desktop, Tablet, Mobile view

--- a/Practice2/src/partials/top-section.html
+++ b/Practice2/src/partials/top-section.html
@@ -27,16 +27,19 @@
         <img src="./assets/images/facebook-icon.png" alt="facebook-icon" class="nav-icon-success">
         <img src="./assets/images/instagram-icon.png" alt="instagram-icon">
       </div>
+      <button class="nav-menu"><img src="./assets/images/menu-icon.png" alt="menu-icon"></button>
     </div>
-  </div class="info-video">
+  </div>
+  <div class="info-video">
   <h1 class="top-heading">See The Unmatched Beauty Of The Great Leaks</h1>
   <div class="nav-video">
     <picture>
-      <source media="(min-width: 1440px)" srcset="./assets/images/top-img-sub.png">
-      <source media="(min-width: 768px)" srcset="./assets/images/top-img-sub-tablet.png">
-      <source media="(min-width: 320px)" srcset="./assets/images/top-img-sub-mobile.png">
-      <img src="./assets/images/top-img-sub.png" alt="image-sub" class="top-img-sub">
+      <source media="(min-width: 555px)" srcset="./assets/images/top-img-sub.png">
+      <source media="(min-width: 346px)" srcset="./assets/images/top-img-sub-tablet.png">
+      <source media="(min-width: 240px)" srcset="./assets/images/top-img-sub-mobile.png">
+      <img src="./assets/images/top-img-sub-mobile.png" alt="image-sub" class="top-img-sub">
     </picture>
     <button class="play-button"><img src="./assets/images/play-button.png"></button>
   </div>
+</div>
 </header>
