--- a/Practice2/src/styles/components/top.css
+++ b/Practice2/src/styles/components/top.css
@@ -55,19 +55,25 @@
   margin-right: 43px;
 }
 
+.info-video {
+  max-width: 620px;
+  margin: 0 auto;
+}
+
 .top-heading {
   top: 163px;
   font-size: var(--fs-heading-large);
   line-height: var(--lh-heading-large);
   text-align: center;
   margin-top: 74px;
+  font-weight: normal;
 }
 
 .nav-video {
   position: relative;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
   .nav-top {
     display: flex;
     padding: 32px 24px 0 24px;
@@ -91,11 +97,69 @@
   .top-text {
     margin-right: 30px;
   }
+
+  .top-heading {
+    font-size: var(--fs-base);
+    line-height: 36px;
+    text-align: center;
+  }
+
+  .info-video {
+    max-width: 524px;
+    margin: 0 auto;
+    overflow: hidden;
+  }
 }
 
-@media only screen and (min-width: 320px) {
+@media only screen and (max-width: 320px) {
   .nav-top {
     display: flex;
     padding: 24px var(--p-small) 0 var(--p-small);
+    justify-content: space-between;
+  }
+
+  .nav-link-success {
+    margin-right: 2px;
+  }
+
+  .nav {
+    display: none;
+  }
+
+  .top-text {
+    order: 1;
+    font-size: 20px;
+    line-height: var(--lh-default);
+  }
+
+  .nav-icon {
+    order: 2;
+    padding: 0;
+  }
+
+  .nav-menu {
+    order: 3;
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    border: none;
+    padding: 0;
+  }
+
+  .top-heading {
+    font-size: 20px;
+    line-height: var(--lh-default);
+    text-align: center;
+  }
+
+  .info-video {
+    max-width: 240px;
+    margin: 0 auto;
+    overflow: hidden;
+  }
+}
+
+@media screen and (min-width: 321px) {
+  .nav-menu {
+    display: none;
   }
 }
