Update top.css, font-size.css, line-height.css, padding.css, top-section.html

--- a/Practice2/src/partials/top-section.html
+++ b/Practice2/src/partials/top-section.html
@@ -5,7 +5,6 @@
     <source media="(min-width: 320px)" srcset="./assets/images/top-background-mobile.png">
     <img src="./assets/images/top-background-mobile.png" alt="background" class="top-img">
   </picture>
-  <div>
     <div class="nav-top">
       <p class="top-text">h.</p>
       <ul class="nav">
@@ -29,14 +28,13 @@
       </div>
       <button class="nav-menu"><img src="./assets/images/menu-icon.png" alt="menu-icon"></button>
     </div>
-  </div>
   <div class="info-video">
   <h1 class="top-heading">See The Unmatched Beauty Of The Great Leaks</h1>
   <div class="nav-video">
-    <picture>
-      <source media="(min-width: 555px)" srcset="./assets/images/top-img-sub.png">
-      <source media="(min-width: 346px)" srcset="./assets/images/top-img-sub-tablet.png">
-      <source media="(min-width: 240px)" srcset="./assets/images/top-img-sub-mobile.png">
+    <picture class="top-img-sub-common">
+      <source media="(min-width: 1440px)" srcset="./assets/images/top-img-sub.png">
+      <source media="(min-width: 768px)" srcset="./assets/images/top-img-sub-tablet.png">
+      <source media="(min-width: 320px)" srcset="./assets/images/top-img-sub-mobile.png">
       <img src="./assets/images/top-img-sub-mobile.png" alt="image-sub" class="top-img-sub">
     </picture>
     <button class="play-button"><img src="./assets/images/play-button.png"></button>
