--- a/Practice2/src/partials/features-section.html
+++ b/Practice2/src/partials/features-section.html
@@ -1,13 +1,13 @@
 <section class="page-features">
   <h1 class="features-heading">Features</h1>
-  <h4 class="features-heading-sub">We're talking it to the next level</h4>
+  <h2 class="features-heading-sub">We're talking it to the next level</h2>
   <div class="features-social">
     <div class="features-description">
       <div class="media-features media-features-warning">
         <img src="./assets/images/features-sub-primary.jpg" alt="Icon" class="media-features-thumbnail">
         <div>
           <h4 class="media-text media-title-features">
-            Reponsive Layout
+            Responsive Layout
           </h4>
           <p class="media-text media-text-success">
             The past few years have seen a dramatic change in the public perception of cosmetic surgery.
@@ -21,7 +21,8 @@
             Pixel Perfect
           </h4>
           <p class="media-text media-text-success">
-            About 64% of all on-line teens say that do things online that they wouldn’t want their parents to know about.
+            About 64% of all on-line teens say that do things online that they wouldn’t want their parents to know
+            about.
           </p>
         </div>
       </div>
@@ -41,7 +42,7 @@
       <source media="(min-width: 1440px)" srcset="./assets/images/features-large.png">
       <source media="(min-width: 768px)" srcset="./assets/images/features-large-tablet.png">
       <source media="(min-width: 320px)" srcset="./assets/images/features-large-mobile.png">
-      <img src="./assets/images/features-large-mobile.png" alt="macbook">
+      <img src="./assets/images/features-large-mobile.png" alt="macbook" class="features-macbook">
     </picture>
   </div>
 </section>
