--- a/Practice2/src/styles/components/features.css
+++ b/Practice2/src/styles/components/features.css
@@ -51,7 +51,7 @@
   .features-social {
     display: flex;
     justify-content: space-around;
-    padding: 0 0 0 50px;
+    padding: 0 0 40px 50px;
   }
 
   .futures-device {
@@ -72,6 +72,7 @@
   .features-heading {
     font-size: var(--fs-heading-m-default);
     line-height: var(--lh-tb-large);
+    padding-top: var(--p-success);
   }
 
   .features-heading-sub {
@@ -81,7 +82,7 @@
 
   .features-social {
     display: flex;
-    flex-wrap: wrap;
-    padding: 0;
+    flex-direction: column;
+    align-items: center;
   }
 }
