Update features-section.html, features.css, naming class

--- a/Practice2/src/partials/features-section.html
+++ b/Practice2/src/partials/features-section.html
@@ -6,7 +6,7 @@
       <div class="media-features media-features-warning">
         <img src="./assets/images/features-sub-primary.jpg" alt="Icon" class="media-features-thumbnail">
         <div>
-          <h4 class="media-text media-title-features">
+          <h4 class="media-text media-heading">
             Responsive Layout
           </h4>
           <p class="media-text media-text-success">
@@ -17,7 +17,7 @@
       <div class="media-features media-features-warning">
         <img src="./assets/images/features-sub-secondary.jpg" alt="Icon" class="media-features-thumbnail">
         <div>
-          <h4 class="media-text media-title-features">
+          <h4 class="media-text media-heading">
             Pixel Perfect
           </h4>
           <p class="media-text media-text-success">
@@ -29,7 +29,7 @@
       <div class="media-features">
         <img src="./assets/images/features-sub-success.jpg" alt="Icon" class="media-features-thumbnail">
         <div>
-          <h4 class="media-text media-title-features">
+          <h4 class="media-text media-heading">
             Organized Layers
           </h4>
           <p class="media-text media-text-success">
