--- a/Practice2/src/partials/features-section.html
+++ b/Practice2/src/partials/features-section.html
@@ -5,7 +5,7 @@
     <div class="features-description">
       <div class="media-features media-features-warning">
         <img src="./assets/images/features-sub-primary.jpg" alt="Icon" class="media-features-thumbnail">
-        <div>
+        <div class="media-text-common">
           <h4 class="media-text media-heading">
             Responsive Layout
           </h4>
@@ -16,7 +16,7 @@
       </div>
       <div class="media-features media-features-warning">
         <img src="./assets/images/features-sub-secondary.jpg" alt="Icon" class="media-features-thumbnail">
-        <div>
+        <div class="media-text-common">
           <h4 class="media-text media-heading">
             Pixel Perfect
           </h4>
@@ -28,7 +28,7 @@
       </div>
       <div class="media-features">
         <img src="./assets/images/features-sub-success.jpg" alt="Icon" class="media-features-thumbnail">
-        <div>
+        <div class="media-text-common">
           <h4 class="media-text media-heading">
             Organized Layers
           </h4>
