--- a/Practice2/src/partials/top-section.html
+++ b/Practice2/src/partials/top-section.html
@@ -5,7 +5,7 @@
     <source media="(min-width: 320px)" srcset="./assets/images/top-background-mobile.png">
     <img src="./assets/images/top-background-mobile.png" alt="background" class="top-img">
   </picture>
-  <div class="nav-top">
+  <nav class="navbar-top">
     <p class="top-text">h.</p>
     <ul class="nav">
       <li class="nav-item">
@@ -27,7 +27,7 @@
       <img src="./assets/images/instagram-icon.png" alt="instagram-icon">
     </div>
     <button class="nav-menu"><img src="./assets/images/menu-icon.png" alt="menu-icon"></button>
-  </div>
+  </nav>
   <div class="info-video">
     <h1 class="top-heading">See The Unmatched Beauty Of The Great Leaks</h1>
     <div class="nav-video">
