--- a/Practice2/src/styles/components/common/card.css
+++ b/Practice2/src/styles/components/common/card.css
@@ -22,6 +22,7 @@
   text-align: center;
   line-height: var(--lh-heading-base);
   text-transform: uppercase;
+  font-weight: normal;
 }
 
 .card-title-primary {
@@ -61,6 +62,7 @@
   text-align: center;
   line-height: var(--lh-heading-base);
   text-transform: uppercase;
+  font-weight: normal;
 }
 
 .plan-year-primary {
