--- a/Practice2/src/styles/components/choose-your-plan.css
+++ b/Practice2/src/styles/components/choose-your-plan.css
@@ -109,23 +109,23 @@
     position: relative;
   }
 
+  .card {
+    position: absolute;
+  }
+
   .card-success {
-    position: relative;
     z-index: 1;
     top: -20px;
   }
 
   .card-warning {
     z-index: 3;
-    position: absolute;
   }
 
   .card-danger {
-    background-color: rgba(var(--color), 0.7);
     z-index: 2;
-    position: absolute;
     top: -10px;
-    opacity: 0.7;
+    background-color: var(--c-darker);
   }
 
   .choose-your-plan-text-common {
